--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonc-parser": "3.2.1",
     "node-emoji": "2.1.0",
     "ora": "5.4.1",
+    "ts-morph": "^23.0.0",
     "typescript": "~5.3.2"
   },
   "devDependencies": {
