--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular-devkit/core": "^17.2.0",
     "@angular-devkit/schematics": "^17.2.0",
     "ansi-colors": "4.1.3",
+    "cheerio": "1.0.0-rc.12",
     "inquirer": "8.2.6",
+    "js-beautify": "^1.14.3",
     "jsonc-parser": "3.2.1",
     "node-emoji": "2.1.0",
     "ora": "5.4.1",
